[gd_scene load_steps=7 format=3 uid="uid://ccxbpogh4na0x"]

[ext_resource type="PackedScene" uid="uid://bjdch1vt0u3qe" path="res://Scenes/UI/TileSelector.tscn" id="1_p3h20"]
[ext_resource type="Script" uid="uid://33h7ke18pfkj" path="res://Scripts/UI/PlannerUI.gd" id="1_wubfe"]
[ext_resource type="Theme" uid="uid://b0urpy7o51mus" path="res://Themes/MenuBar.tres" id="2_ock22"]
[ext_resource type="PackedScene" uid="uid://cvkc0yd6fdkx1" path="res://Scenes/UI/SetSelector.tscn" id="3_51qet"]
[ext_resource type="Script" uid="uid://bg6kv52sn6wvy" path="res://Scripts/UI/FileButton.gd" id="3_cr31u"]
[ext_resource type="PackedScene" uid="uid://cwjg548hsv7kc" path="res://Scenes/UI/SaveAsDialog.tscn" id="4_v7e5h"]

[node name="PlannerUI" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0
script = ExtResource("1_wubfe")

[node name="Top" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_vertical = 0

[node name="Panel" type="Panel" parent="Top"]
layout_mode = 2

[node name="MenuBar" type="MenuBar" parent="Top"]
custom_minimum_size = Vector2(0, 36)
layout_mode = 2
size_flags_vertical = 0
theme = ExtResource("2_ock22")

[node name="FileButton" type="MenuButton" parent="Top/MenuBar"]
layout_mode = 0
offset_right = 100.0
offset_bottom = 36.0
theme_override_font_sizes/font_size = 20
text = "File"
text_overrun_behavior = 3
script = ExtResource("3_cr31u")

[node name="SaveAsDialogControl" parent="Top/MenuBar/FileButton" instance=ExtResource("4_v7e5h")]
visible = false

[node name="Left" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
metadata/_edit_use_anchors_ = true

[node name="Background" type="Panel" parent="Left"]
layout_mode = 2

[node name="HSplitContainer" type="HBoxContainer" parent="Left"]
layout_mode = 2
size_flags_horizontal = 0

[node name="SetSelectorControl" parent="Left/HSplitContainer" instance=ExtResource("3_51qet")]
unique_name_in_owner = true
layout_mode = 2
margin = 81

[node name="TileSelectorControl" parent="Left/HSplitContainer" instance=ExtResource("1_p3h20")]
unique_name_in_owner = true
layout_mode = 2
